--- a/STBattle.css
+++ b/STBattle.css
@@ -6,7 +6,6 @@
 	left: -400;
 	height: 900px;
 	width: auto;
-	overflow: hidden;
 }
 
 #chooseSide
@@ -16,18 +15,22 @@
 	font-size: 4em;
 	color: white;
 }
-
 .lightText
 {
-	text-align: center;
+	clear:both;
+	float: left;
+	margin-left: 470px;
 	font-size: 3em;
 	color: white;
 	text-shadow: blue 0 0 20px;
 }
 
+
+
 .darkText
 {
-	text-align: center;
+	float: right;
+	margin-right: 0x;
 	font-size: 3em;
 	color: white;
 	text-shadow: red 0 0 20px;
@@ -41,6 +44,16 @@
 	font-size: 3em;
 	color: white;
 	text-shadow: blue 0 0 20px;
+}
+
+.begin
+{
+	clear:both;
+	float: left;
+	margin-left: 750px;
+	font-size: 3em;
+	color: white;
+	text-shadow: purple 0 0 20px;
 }
 
 .darkLink
@@ -57,7 +70,6 @@
 	background: url(light.jpg);
 	height: 100%;
 	background-size: cover;
-	overflow: hidden;
 }
 
 .dark
@@ -65,10 +77,10 @@
 	background: url(dark.jpg);
 	height: 100%;
 	background-size: cover;
-	overflow: hidden;
 }
 
-a{
+a
+{
 	color: white;
 }
 
@@ -78,9 +90,179 @@ a:hover
 	text-decoration: none;
 }
 
-.battleScreen{
+.battleScreen
+{
 	background: url(battleBackground.jpg);
 	height: 100%;
-	overflow: hidden;
 	background-size: 100% 100%;
+}
+/*NEW CODE below*/
+
+.heroDisplay
+{
+	float: left;
+	margin-left: 150px;
+	margin-top: 100px;
+}
+
+.lightDisplay
+{
+	float: left;
+	margin-left: 150px;
+	margin-top: 100px;
+}
+
+.darkDisplay
+{
+	float: right;
+	margin-right: 150px;
+	margin-top: 100px;
+}
+
+.heroDisplayName
+{
+	color: white;
+	font-size: 3em;
+	margin-bottom: 20px;
+}
+
+.heroDisplayImage img
+{
+	width: auto;
+	height: 400px;
+	border-radius:15%;
+}
+.heroDisplayPower
+{
+	color: white;
+	font-size: 2.5em;
+}
+.armyDisplay
+{
+	float: right;
+	margin-right: 150px;
+	margin-top: 100px;
+
+}
+
+
+
+.armyDisplayName
+{
+	color: white;
+	font-size: 3em;
+	margin-bottom: 20px;
+}
+.armyInfo
+{
+	color: white;
+	font-size: 2.5em;
+}
+
+.armyDisplayImage img
+{
+	width: auto;
+	height: 400px;
+	border-radius:15%;
+}
+
+.changebtn
+{
+	margin-top: 20px;
+}
+
+.armyOption
+{
+	float: right;
+	clear:both;
+	margin-right: 700px;
+	color: white;
+	font-size: 1.7em;
+	border-radius:15%;
+	margin-bottom: 15px;
+	margin-top: 10px;
+
+}
+
+.armyOptionImage:hover
+{
+	cursor:pointer;
+}
+
+.armyOptionImage img
+{
+	width: auto;
+	height: 200px;
+	border-radius:15%;
+}
+
+.armyOptionName
+{
+
+}
+
+.customizeScreen
+{
+	background: url(stars.jpg);
+	height: 100%;
+	overflow: visible;
+	background-size: cover;
+}
+
+.cover
+{
+	background-color: black;
+}
+
+.myinput
+{
+	width: 300px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	margin-left: 20px;
+}
+
+.armyCreation
+{
+	position: absolute;
+	margin-left: 120px;
+	margin-top: 50px;
+	background-color: white;
+	border-radius:5%;
+	width: 350px;
+	height: 320px;
+
+}
+
+.abilityList
+{
+	position: absolute;
+	margin-left: 120px;
+	margin-top: 450px;
+	background-color: white;
+	border-radius:5%;
+	width: 350px;
+	height: 650px;
+
+}
+
+.power
+{
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	font-size: 1.5em;
+}
+
+.creationTitle
+{
+	margin-top: 20px;
+	margin-left: 10px;
+	font-size: 2em;
+}
+
+.creationInputs
+{
+	margin-top: 10px;
 }
